syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.explorviz.code.proto";
option java_outer_classname = "FileDataEvent";

import "google/protobuf/empty.proto";

service FileDataService {
  rpc sendFileData (FileData) returns (google.protobuf.Empty) {}
}

message  MethodData {
  string returnType = 1;
  repeated string modifier = 2;
  repeated ParameterData parameter = 3;
  repeated string outgoingMethodCalls = 4;
  int32 nPath = 5;
  int32 acPath = 6;
  int32 loc = 7;
}

message  ConstructorData {
  repeated string modifier = 1;
  repeated ParameterData parameter = 2;
  repeated string outgoingMethodCalls = 3;
  int32 nPath = 4;
  int32 acPath = 5;
  int32 loc = 6;
}

enum ClassType {
  INTERFACE = 0;
  ABSTRACT_CLASS = 1;
  CLASS = 2;
  ENUM = 3;
}

message ParameterData {
  string name = 1;
  string type = 2;
  repeated string modifier = 3;
}

message FieldData {
  string name = 1;
  string type = 2;
  repeated string modifier = 3;
}

message ClassData {
  ClassType type = 1;
  repeated string modifier = 2;
  repeated string interface = 3;
  repeated FieldData field = 4;
  repeated string innerClass = 5;
  repeated ConstructorData constructor = 6;
  map<string, MethodData>  methodData = 7;
  repeated string variable = 8;
  string superClass = 9;

  int32 loc = 10;
  repeated string enumConstant = 11;
  repeated string tightCoupled = 12;
  repeated string looseCoupled = 13;
}

message FileData {
  string commitID = 1;
  string fileName = 2;
  string packageName = 3;
  repeated string importName = 4;
  map<string, ClassData> classData = 5;
  int32 loc = 6;
}