syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.explorviz.code.proto";
option java_outer_classname = "StateDataEvent";

package net.explorviz.code.proto;

service StateDataService {
  rpc RequestStateData (StateDataRequest) returns (StateData) {}
}

message StateDataRequest {
  string repository_name = 1;
  string branch_name = 2;
  string landscape_token = 3;

  // Application name -> path relative to repo root
  // Default: { "foo_application": "" }
  map<string, string> application_paths = 4;
}

message StateData {
  // Newest already persisted commit
  string commit_id = 1;
}
